# thoth

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  run.py
.github/workflows/: ci.yml  publish_release.yml
docs/: CHANGELOG.md  README.md  examples.md
docs/api/: cli.md  handlers.md  utils.md
docs/source/: conf.py  index.rst  modules.rst  thoth.handler.rst  thoth.rst
text/dt/: eda.md  intro.md
text/knn/: eda.md  intro.md  playground.md
thoth/: __init__.py  __main__.py  cli.py  dataloaders.py  helper.py  run.py  thoth.py  thoth_runner.py  utils.py
thoth/handler/: BaseHandler.py  DTHandler.py  KNNHandler.py  __init__.py  base_handler.py  dt.py  generic.py
thoth/text/dt/: playground.md
