[tool.poetry]
name = "thoth"
version = "0.1.0"
description = ""
authors = ["Felix <felix.lonergan@gmail.com>"]

[tool.poetry.scripts]
thoth = "thoth.cli:thoth"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
streamlit = "~=1.8"
pandas = "^1.3.4"
scikit-learn = "^1.0.1"
graphviz = "^0.18"
# Pin the version of JSONSchema to avoid a bug in Altair
# https://github.com/altair-viz/altair/issues/2504
jsonschema = "==3.2"
watchdog = "^2.1.6"
click = "~=8.0"

[tool.poetry.dev-dependencies]
black = "~=22.3"
pylint = "^2.11.1"
mypy = "^0.910"
Sphinx = "^4.3.0"
sphinxcontrib-napoleon = "^0.7"
pytest = "^6.2.5"
recommonmark = "^0.7.1"
sphinx-rtd-theme = "^1.0.0"
safety = "~=1.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
