[tool.poetry]
name = "thoth-ml"
version = "0.1.0"
description = "Interactive playground for machine learning"
authors = ["Felix Lonergan Corti <felix.lonergan@gmail.com>"]
homepage = "https://thoth-ml.readthedocs.io/en/latest/"
documentation = "https://thoth-ml.readthedocs.io/en/latest/"
repository = "https://github.com/FelixLonergan/thoth"
readme = "README.md"
packages = [ {include = "thoth"} ]

[tool.poetry.scripts]
thoth = "thoth.cli:thoth"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
streamlit = "~=1.8"
pandas = "~=1.3.4"
scikit-learn = "~=1.0.1"
graphviz = "~=0.18"
# Pin the version of JSONSchema to avoid a bug in Altair
# https://github.com/altair-viz/altair/issues/2504
jsonschema = "==3.2"
watchdog = "~=2.1.6"
click = "~=8.0"
isort = "~=5.10"

# Add documentation dependencies as an extra
mkdocs = { version = "~=1.3.0", optional = true }
mkdocs-material = { version = "~=8.2.9", optional = true }
mkdocstrings = {extras = ["python"], version = "~=0.18.1"}
mkdocs-include-markdown-plugin = { version = "~=3.3.0", optional = true }
mkdocs-click = { version = "~=0.5.0", optional = true }

[tool.poetry.dev-dependencies]
black = "~=22.3"
pylint = "~=2.13"
mypy = "~=0.940"
safety = "~=1.10"
mkdocs = "~=1.3.0"
mkdocs-material = "~=8.2.9"
mkdocstrings = {extras = ["python"], version = "~=0.18.1"}
mkdocs-include-markdown-plugin = "~=3.3.0"
mkdocs-click = "~=0.5.0"
pre-commit = "~=2.18.1"

[tool.poetry.extras]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings", "mkdocs-include-markdown-plugin", "mkdocs-click"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["pandas.*", "sklearn.*", "altair.*", "PIL.*"]
ignore_missing_imports = true
